--- a/src/www/index.html
+++ b/src/www/index.html
@@ -155,20 +155,20 @@
                 <label for="actualizar">
                     Componente <select name="actualizar"><option value="-1" disabled selected>-- Selecciona componente --</option></select>
                 </label>
-                <label for="nombre">
-                    Nuevo nombre <input type="text" name="nombre" value="AMD Ryzen 5 5600X" maxlength="50" required/>
+                <label for="nuevoNombre">
+                    Nuevo nombre <input type="text" name="nuevoNombre" value="AMD Ryzen 5 5600X" maxlength="50" required/>
                 </label>
-                <label for="fecha">
-                    Nueva fecha <input type="date" name="fecha" required/>
+                <label for="nuevaFecha">
+                    Nueva fecha <input type="date" name="nuevaFecha" required/>
                 </label>
-                <label for="precio">
-                    Nuevo precio <input type="number" name="precio" value="250.05" step=".01" required/>
+                <label for="nuevoPrecio">
+                    Nuevo precio <input type="number" name="nuevoPrecio" value="250.05" step=".01" required/>
                 </label>
-                <label for="descripcion">
-                    Nueva descripción <textarea name="descripcion" maxlength="500" rows="8" cols="50" required>El AMD Ryzen 5 5600X es un procesador de escritorio con 6 núcleos, lanzado en noviembre de 2020. Forma parte de la línea Ryzen 5 y utiliza la arquitectura Zen 3 (Vermeer) con Socket AM4.</textarea>
+                <label for="nuevaDescripcion">
+                    Nueva descripción <textarea name="nuevaDescripcion" maxlength="500" rows="8" cols="50" required>El AMD Ryzen 5 5600X es un procesador de escritorio con 6 núcleos, lanzado en noviembre de 2020. Forma parte de la línea Ryzen 5 y utiliza la arquitectura Zen 3 (Vermeer) con Socket AM4.</textarea>
                 </label>
-                <label for="subirImagen">
-                    Subir nueva imagen <input type="file" name="subirImagen" accept="image/png, image/jpeg"/>
+                <label for="nuevaImagen">
+                    Subir nueva imagen <input type="file" name="nuevaImagen" accept="image/png, image/jpeg"/>
                 </label>
                 <fieldset>
                     <legend>Seguros que tiene el producto</legend>
@@ -183,8 +183,8 @@
                     </label>
                 </fieldset>
                 <div id="divBotonesForm">
-                    <button type="button" id="botonAceptar">Aceptar</button>
-                    <button type="button" id="botonCancelar">Cancelar</button>
+                    <button type="button" id="botonActualizar">Aceptar</button>
+                    <button type="button" id="botonBorrar">Cancelar</button>
                 </div>
             </form>
         </div>
