--- a/src/www/index.html
+++ b/src/www/index.html
@@ -172,14 +172,14 @@
                 </label>
                 <fieldset>
                     <legend>Seguros que tiene el producto</legend>
-                    <label for="seguro1" class="labelCheckbox">
-                        Seguro contra robos <input type="checkbox" name="seguro1"/>
+                    <label for="nuevoSeguro1" class="labelCheckbox">
+                        Seguro contra robos <input type="checkbox" name="nuevoSeguro1"/>
                     </label>
-                    <label for="seguro2" class="labelCheckbox">
-                        Seguro contra roturas <input type="checkbox" checked name="seguro2"/>
+                    <label for="nuevoSeguro2" class="labelCheckbox">
+                        Seguro contra roturas <input type="checkbox" checked name="nuevoSeguro2"/>
                     </label>
-                    <label for="seguro3" class="labelCheckbox">
-                        Seguro contra caídas no accidentales <input type="checkbox" name="seguro3"/>
+                    <label for="nuevoSeguro3" class="labelCheckbox">
+                        Seguro contra caídas no accidentales <input type="checkbox" name="nuevoSeguro3"/>
                     </label>
                 </fieldset>
                 <div id="divBotonesForm">
