--- a/src/www/index.html
+++ b/src/www/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta author="David Pérez Saché"/>
-        <title>Listado componentes</title>
+        <title>CoolPC web</title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <link rel="stylesheet" type="text/css" href="../www/css/styles.css"/>
         <link rel="icon" type="image/x-icon" href="../../diseno/logo-icono.png"/>
