--- a/src/www/index.html
+++ b/src/www/index.html
@@ -142,7 +142,7 @@
                     </label>
                 </fieldset>
                 
-                <div id="divBotonesForm">
+                <div class="divBotonesForm">
                     <button type="button" id="botonAceptar">Aceptar</button>
                     <button type="button" id="botonCancelar">Cancelar</button>
                 </div>
