--- a/src/www/index.html
+++ b/src/www/index.html
@@ -41,75 +41,8 @@
         
         <!-- Listado -->
         <div id="divListado">
-            <p id="pTotal">Total de productos: <span id="spanTotal">2</span></p>
-            <div class="divItem">
-                <img src="../../src/www/assets/mockups_img/mockup_item1.jpg" alt="Imagen de componente"/>
-                <p class="pNombreItem">Gigabyte GeForce RTX 3060 Gaming OC 12 GB V2 LHR</p>
-                <p class="pPrecioItem">449,89€</p>
-                <div class="divDescItem">
-                    <p>
-                        LA VICTORIA SE MIDE EN MILISEGUNDOS: NVIDIA Reflex ofrece la máxima ventaja competitiva. La latencia más baja. 
-                        La mejor capacidad de respuesta. Gracias a las GPU GeForce RTX serie 30 y los monitores NVIDIA
-                    </p>
-                    <p>
-                        TU JUEGO CREATIVO: Lleva tus proyectos creativos a un nuevo nivel con las GPU GeForce RTX serie 30. 
-                        Ofrece aceleración por IA en las mejores aplicaciones creativas. Con el soporte de la plataforma NVIDIA Studio de controladores dedicados y herramientas exclusivas.
-                        Y creado para obtener resultados en un tiempo récord. Tanto si estás renderizando escenas en 3D complejas, editando vídeo de 8K o retransmitiendo con la mejor codificación y calidad de imagen, 
-                        las GPU GeForce RTX te ofrecen el rendimiento necesario para tus mejores creaciones.
-                    </p>
-                </div>
-                <div class="pFechaItem">
-                    <p>Fecha de lanzamiento: <span class="spanFecha">12/01/2021</span></p>
-                </div>
-                <p class="pSegurosItem">
-                    <ul>
-                        <li>Se ofrece seguro contra roturas</li>
-                        <li>Se ofrece seguro contra caídas</li>
-                    </ul>
-                </p>
-                <div>
-                    <button class="buttonEditar">
-                        <span class="material-icons">edit</span>
-                    </button>
-                    <button class="buttonBorrar">
-                        <span class="material-icons">delete</span>
-                    </button>
-                </div>
-                <hr class="hrItems"/>
-            </div>
-
-            <div class="divItem">
-                <img src="../../src/www/assets/mockups_img/mockup_item2.jpg" alt="Imagen de componente"/>
-                <p class="pNombreItem">AMD Ryzen 5 5600X</p>
-                <p class="pPrecioItem">215,87€</p>
-                <div class="divDescItem">
-                    <p>
-                        El AMD Ryzen 5 5600X es un procesador de escritorio con 6 núcleos, lanzado en noviembre de 2020. 
-                        Forma parte de la línea Ryzen 5 y utiliza la arquitectura Zen 3 (Vermeer) con Socket AM4. Gracias a AMD Simultaneous Multithreading (SMT), 
-                        el recuento de núcleos se duplica efectivamente a 12 subprocesos. Ryzen 5 5600X tiene 32 MB de caché L3 y funciona a 3,7 GHz de forma predeterminada,
-                        pero puede aumentar hasta 4,6 GHz, según la carga de trabajo. AMD está construyendo el Ryzen 5 5600X en un proceso de producción de 7 nm utilizando 4150 millones de transistores. 
-                    </p>
-                </div>
-                <div class="pFechaItem">
-                    <p>Fecha de lanzamiento: <span class="spanFecha">05/11/2020</span></p>
-                </div>
-                <p class="pSegurosItem">
-                    <ul>
-                        <li>No se ofrece ningún seguro</li>
-                    </ul>
-                </p>
-                <div>
-                    <button class="buttonEditar">
-                        <span class="material-icons">edit</span>
-                    </button>
-                    <button class="buttonBorrar">
-                        <span class="material-icons">delete</span>
-                    </button>
-                </div>
-                <hr class="hrItems"/>
-            </div>
+            <p id="pTotal">Total de productos: <span id="spanTotal">0</span></p>
         </div>
-
         <!-- Alta -->
         <div id="divAlta">
             <form id="formAlta">
@@ -124,6 +57,20 @@
                 </label>
                 <label for="descripcion">
                     Descripción <textarea name="descripcion" maxlength="500" rows="8" cols="50" required></textarea>
+                </label>
+                <label for="categoria">
+                    Categoría
+                    <select name="categoria">
+                        <option value="-1" disabled selected>-- Selecciona --</option>
+                        <option value="1">CPU</option>
+                        <option value="2">GPU</option>
+                        <option value="3">RAM</option>
+                        <option value="4">Fuente de alimentación</option>
+                        <option value="5">Placa base</option>
+                        <option value="6">Disco duro</option>
+                        <option value="7">Torre</option>
+                        <option value="8">Otro</option>
+                    </select>  
                 </label>
                 <label for="subirImagen">
                     Subir imagen <input type="file" name="subirImagen" accept="image/png, image/jpeg"/>
@@ -156,16 +103,30 @@
                     Componente <select name="actualizar"><option value="-1" disabled selected>-- Selecciona componente --</option></select>
                 </label>
                 <label for="nuevoNombre">
-                    Nuevo nombre <input type="text" name="nuevoNombre" value="AMD Ryzen 5 5600X" maxlength="50" required/>
+                    Nuevo nombre <input type="text" name="nuevoNombre" maxlength="50" required/>
                 </label>
                 <label for="nuevaFecha">
                     Nueva fecha <input type="date" name="nuevaFecha" required/>
                 </label>
                 <label for="nuevoPrecio">
-                    Nuevo precio <input type="number" name="nuevoPrecio" value="250.05" step=".01" required/>
+                    Nuevo precio <input type="number" name="nuevoPrecio" step=".01" required/>
                 </label>
                 <label for="nuevaDescripcion">
-                    Nueva descripción <textarea name="nuevaDescripcion" maxlength="500" rows="8" cols="50" required>El AMD Ryzen 5 5600X es un procesador de escritorio con 6 núcleos, lanzado en noviembre de 2020. Forma parte de la línea Ryzen 5 y utiliza la arquitectura Zen 3 (Vermeer) con Socket AM4.</textarea>
+                    Nueva descripción <textarea name="nuevaDescripcion" maxlength="500" rows="8" cols="50" required></textarea>
+                </label>
+                <label for="nuevaCategoria">
+                    Nueva categoría
+                    <select name="nuevaCategoria">
+                        <option value="-1" disabled selected>-- Selecciona --</option>
+                        <option value="1">CPU</option>
+                        <option value="2">GPU</option>
+                        <option value="3">RAM</option>
+                        <option value="4">Fuente de alimentación</option>
+                        <option value="5">Placa base</option>
+                        <option value="6">Disco duro</option>
+                        <option value="7">Torre</option>
+                        <option value="8">Otro</option>
+                    </select>  
                 </label>
                 <label for="nuevaImagen">
                     Subir nueva imagen <input type="file" name="nuevaImagen" accept="image/png, image/jpeg"/>
@@ -176,7 +137,7 @@
                         Seguro contra robos <input type="checkbox" name="nuevoSeguro1"/>
                     </label>
                     <label for="nuevoSeguro2" class="labelCheckbox">
-                        Seguro contra roturas <input type="checkbox" checked name="nuevoSeguro2"/>
+                        Seguro contra roturas <input type="checkbox" name="nuevoSeguro2"/>
                     </label>
                     <label for="nuevoSeguro3" class="labelCheckbox">
                         Seguro contra caídas no accidentales <input type="checkbox" name="nuevoSeguro3"/>
