--- a/src/www/index.html
+++ b/src/www/index.html
@@ -45,7 +45,7 @@
         </div>
         <!-- Alta -->
         <div id="divAlta">
-            <p>⚠️ Rellena correctamente los campos indicados ⚠️</p>
+            <p class="pAviso">⚠️ Rellena correctamente los campos indicados ⚠️</p>
             <form id="formAlta">
                 <label for="nombre">
                     Nombre <input type="text" name="nombre" pattern="^[A-Z][a-z]{3,50}$" maxlength="50"/>
@@ -99,6 +99,7 @@
 
         <!-- Modificar -->
         <div id="divModificar">
+            <p class="pAviso">⚠️ Rellena correctamente los campos indicados ⚠️</p>
             <form id="formModificar">
                 <label for="actualizar">
                     Componente <select name="actualizar"><option value="-1" disabled selected>-- Selecciona componente --</option></select>
@@ -144,7 +145,7 @@
                         Seguro contra caídas no accidentales <input type="checkbox" name="nuevoSeguro3"/>
                     </label>
                 </fieldset>
-                <div id="divBotonesForm">
+                <div class="divBotonesForm">
                     <button type="button" id="botonActualizar">Aceptar</button>
                     <button type="button" id="botonBorrar">Cancelar</button>
                 </div>
