--- a/src/www/index.html
+++ b/src/www/index.html
@@ -45,7 +45,7 @@
         </div>
         <!-- Alta -->
         <div id="divAlta">
-            <p class="pAviso">⚠️ Rellena correctamente los campos indicados ⚠️</p>
+            <p class="pAviso"></p>
             <form id="formAlta">
                 <label for="nombre">
                     Nombre <input type="text" name="nombre" pattern="^[A-Z][a-z]{3,50}$" maxlength="50"/>
@@ -99,7 +99,7 @@
 
         <!-- Modificar -->
         <div id="divModificar">
-            <p class="pAviso">⚠️ Rellena correctamente los campos indicados ⚠️</p>
+            <p class="pAviso"></p>
             <form id="formModificar">
                 <label for="actualizar">
                     Componente <select name="actualizar"><option value="-1" disabled selected>-- Selecciona componente --</option></select>
