--- a/diseno/mockups/mockup_alta.html
+++ b/diseno/mockups/mockup_alta.html
@@ -70,7 +70,11 @@
 
         <footer>
             <img id="imgFooter" src="../logo-icono.png" alt="Logo de CoolPC"/>
-            <img id="imgAccesibilidad" src="../../src/www/assets/wcag2AA-blue.png" alt="Logo de WCAG 2.0 AA"/>
+            <p>
+                <a href="https://achecker.achecks.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+                    <img src="https://achecker.achecks.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102" />
+                </a>
+            </p>
         </footer>
     </body>
 </html>
