--- a/src/www/index.html
+++ b/src/www/index.html
@@ -154,7 +154,11 @@
 
         <footer>
             <img id="imgFooter" src="../../diseno/logo-icono.png" alt="Logo de CoolPC"/>
-            <img id="imgAccesibilidad" src="../www/assets/wcag2AA-blue.png" alt="Logo de WCAG 2.0 AA"/>
+            <p>
+                <a href="https://achecker.achecks.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+                    <img src="https://achecker.achecks.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102"/>
+                </a>
+            </p>
         </footer>
         <script type="module" src="js/controladores/app.js"></script>
     </body>
