--- a/src/www/index.html
+++ b/src/www/index.html
@@ -41,7 +41,7 @@
         
         <!-- Listado -->
         <div id="divListado">
-            <p id="pTotal">Total de productos: <span id="spanTotal">0</span></p>
+            <p class="pAviso">No hay ningún registro.</p>
         </div>
         <!-- Alta -->
         <div id="divAlta">
