--- a/src/www/index.html
+++ b/src/www/index.html
@@ -13,12 +13,12 @@
     <body>
         <header>
             <div id="divCabecera">
-                <img src="../../diseno/logo.png" alt="Logo de CoolPC" id="imgLogo"/>
+                <img src="../../diseno/logo.png" draggable="false" alt="Logo de CoolPC" id="imgLogo"/>
                 <div id="divBusqueda">
                     <label id="labelBuscar" for="buscar">
                         Búsqueda<br/> <input id="buscar" name="buscar" type="text" maxlength="50"/>
                     </label>
-                    <button type="button">
+                    <button type="button" class="boton">
                         <span class="material-icons">search</span>
                     </button>
                 </div>
