--- a/src/www/index.html
+++ b/src/www/index.html
@@ -86,7 +86,7 @@
                         Seguro contra roturas <input type="checkbox" name="seguro2"/>
                     </label>
                     <label for="seguro3" class="labelCheckbox">
-                        Seguro contra caídas no accidentales <input type="checkbox" name="seguro3"/>
+                        Seguro contra caídas <input type="checkbox" name="seguro3"/>
                     </label>
                 </fieldset>
                 
@@ -141,7 +141,7 @@
                         Seguro contra roturas <input type="checkbox" name="nuevoSeguro2"/>
                     </label>
                     <label for="nuevoSeguro3" class="labelCheckbox">
-                        Seguro contra caídas no accidentales <input type="checkbox" name="nuevoSeguro3"/>
+                        Seguro contra caídas <input type="checkbox" name="nuevoSeguro3"/>
                     </label>
                 </fieldset>
                 <div class="divBotonesForm">
