--- a/src/www/index.html
+++ b/src/www/index.html
@@ -161,6 +161,7 @@
             </p>
         </footer>
 
+        <script src="js/jquery-3.6.3.min.js"></script>
         <script type="module" src="js/controladores/app.js"></script>
     </body>
 </html>
