--- a/src/www/index.html
+++ b/src/www/index.html
@@ -153,12 +153,15 @@
 
         <!-- FOOTER -->
         <footer>
-            <img id="imgFooter" src="../../diseno/logo-icono.png" alt="Logo de CoolPC"/>
-            <p>
-                <a href="https://achecker.achecks.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
-                    <img src="https://achecker.achecks.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102"/>
-                </a>
-            </p>
+            <div id="divFooter">
+                <img id="imgFooter" src="../../diseno/logo-icono.png" alt="Logo de CoolPC"/>
+                <p>
+                    <a href="https://achecker.achecks.ca/checker/index.php?uri=referer&gid=WCAG2-AA">
+                        <img src="https://achecker.achecks.ca/images/icon_W2_aa.jpg" alt="WCAG 2.0 (Level AA)" height="32" width="102"/>
+                    </a>
+                </p>
+                <p id="pTiempo"></p>
+            </div>
         </footer>
 
         <script src="js/jquery-3.6.3.min.js"></script>
