--- a/src/www/index.html
+++ b/src/www/index.html
@@ -7,8 +7,10 @@
         <title>CoolPC web</title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <link rel="stylesheet" type="text/css" href="../www/css/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="../jquery-ui-1.13.2.custom/jquery-ui.css"/>
+        <link rel="stylesheet" type="text/css" href="../jquery-ui-1.13.2.custom/jquery-ui.structure.css"/>
+        <link rel="stylesheet" type="text/css" href="../jquery-ui-1.13.2.custom/jquery-ui.theme.css"/>
         <link rel="icon" type="image/x-icon" href="../../diseno/logo-icono.png"/>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     </head>
     <body>
         <header role="navigation">
@@ -38,7 +40,7 @@
                 </div>
             </div>
         </header>
-        
+
         <!-- Listado -->
         <div id="divListado" role="list">
             <p class="pAviso">No hay ningún registro.</p>
@@ -52,7 +54,7 @@
                     Nombre <input aria-label="Nombre" type="text" name="nombre"/>
                 </label>
                 <label for="fecha">
-                    Fecha <input aria-label="Fecha" type="date" name="fecha"/>
+                    Fecha <input aria-label="Fecha" type="text" name="fecha"/>
                 </label>
                 <label for="precio">
                     Precio <input aria-label="Precio" type="number" name="precio" step="0.1"/>
@@ -60,6 +62,21 @@
                 <label for="descripcion">
                     Descripción <textarea aria-label="Descripción" name="descripcion" rows="8" cols="50"></textarea>
                 </label>
+                <label for="subirImagen">
+                    Subir imagen <input type="file" aria-label="Imagen" name="subirImagen" accept="image/png, image/jpeg"/>
+                </label>
+                <fieldset>
+                    <legend>Seguros que tiene el producto</legend>
+                    <label for="seguro1" class="labelCheckbox">
+                        Seguro contra robos <input type="checkbox" aria-label="Seguro contra robos" name="seguro1"/>
+                    </label>
+                    <label for="seguro2" class="labelCheckbox">
+                        Seguro contra roturas <input type="checkbox" aria-label="Seguro contra roturas" name="seguro2"/>
+                    </label>
+                    <label for="seguro3" class="labelCheckbox">
+                        Seguro contra caídas <input type="checkbox" aria-label="Seguro contra caídas" name="seguro3"/>
+                    </label>
+                </fieldset>
                 <label for="categoria">
                     Categoría <select name="categoria">
                         <option value="-1" disabled selected>-- Selecciona --</option>
@@ -73,23 +90,6 @@
                         <option value="8">Otro</option>
                     </select>  
                 </label>
-                <label for="subirImagen">
-                    Subir imagen <input type="file" aria-label="Imagen" name="subirImagen" accept="image/png, image/jpeg"/>
-                </label>
-
-                <fieldset>
-                    <legend>Seguros que tiene el producto</legend>
-                    <label for="seguro1" class="labelCheckbox">
-                        Seguro contra robos <input type="checkbox" aria-label="Seguro contra robos" name="seguro1"/>
-                    </label>
-                    <label for="seguro2" class="labelCheckbox">
-                        Seguro contra roturas <input type="checkbox" aria-label="Seguro contra roturas" name="seguro2"/>
-                    </label>
-                    <label for="seguro3" class="labelCheckbox">
-                        Seguro contra caídas <input type="checkbox" aria-label="Seguro contra caídas" name="seguro3"/>
-                    </label>
-                </fieldset>
-                
                 <div class="divBotonesForm">
                     <button type="button" id="botonCancelar">Cancelar</button>
                     <button type="button" id="botonAceptar">Aceptar</button>
@@ -108,26 +108,13 @@
                     Nuevo nombre <input type="text" aria-label="Nuevo nombre" name="nuevoNombre"/>
                 </label>
                 <label for="nuevaFecha">
-                    Nueva fecha <input type="date" aria-label="Nueva fecha" name="nuevaFecha"/>
+                    Nueva fecha <input type="text" aria-label="Nueva fecha" name="nuevaFecha"/>
                 </label>
                 <label for="nuevoPrecio">
                     Nuevo precio <input type="number" aria-label="Nuevo precio" name="nuevoPrecio" step="0.1"/>
                 </label>
                 <label for="nuevaDescripcion">
                     Nueva descripción <textarea name="nuevaDescripcion" aria-label="Nueva descripción" rows="8" cols="50"></textarea>
-                </label>
-                <label for="nuevaCategoria">
-                    Nueva categoría <select name="nuevaCategoria">
-                        <option value="-1" disabled selected>-- Selecciona --</option>
-                        <option value="1">CPU</option>
-                        <option value="2">GPU</option>
-                        <option value="3">RAM</option>
-                        <option value="4">Fuente de alimentación</option>
-                        <option value="5">Placa base</option>
-                        <option value="6">Disco duro</option>
-                        <option value="7">Torre</option>
-                        <option value="8">Otro</option>
-                    </select>  
                 </label>
                 <label for="nuevaImagen">
                     Subir nueva imagen <input type="file" aria-label="Nueva imagen" name="nuevaImagen" accept="image/png, image/jpeg"/>
@@ -144,6 +131,19 @@
                         Seguro contra caídas <input type="checkbox" aria-label="Seguro contra caídas" name="nuevoSeguro3"/>
                     </label>
                 </fieldset>
+                <label for="nuevaCategoria">
+                    Nueva categoría <select name="nuevaCategoria">
+                        <option value="-1" disabled selected>-- Selecciona --</option>
+                        <option value="1">CPU</option>
+                        <option value="2">GPU</option>
+                        <option value="3">RAM</option>
+                        <option value="4">Fuente de alimentación</option>
+                        <option value="5">Placa base</option>
+                        <option value="6">Disco duro</option>
+                        <option value="7">Torre</option>
+                        <option value="8">Otro</option>
+                    </select>  
+                </label>
                 <div class="divBotonesForm">
                     <button type="button" id="botonBorrar">Cancelar</button>
                     <button type="button" id="botonActualizar">Aceptar</button>
@@ -165,6 +165,7 @@
         </footer>
 
         <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="../jquery-ui-1.13.2.custom/jquery-ui.js"></script>
         <script type="module" src="js/controladores/app.js"></script>
     </body>
 </html>
