--- a/src/www/index.html
+++ b/src/www/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" type="text/css" href="../jquery-ui-1.13.2.custom/jquery-ui.structure.css"/>
         <link rel="stylesheet" type="text/css" href="../jquery-ui-1.13.2.custom/jquery-ui.theme.css"/>
         <link rel="icon" type="image/x-icon" href="../../diseno/logo-icono.png"/>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     </head>
     <body>
         <header role="navigation">
